Added the ability to directly link to a site via the nav

--- a/directors/dugan-gundelfinger/index.html
+++ b/directors/dugan-gundelfinger/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/ismael">Ismael</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="https://www.stoichemaan.com/" target="_blank">STChM</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -72,36 +72,14 @@
 
 					<section class="director-portfolio-work">
 						
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/GAME-30-dir-cut.mp4?mrss=true', 'Coors', 'Not Going into The Game');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54321-PM.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Dominos-You-Tip-We-Tip-DC-60.mp4?mrss=true', 'Dominos', 'You Tip We Tip');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-53921-PM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Coors</h3>
-					<p class="director-portfolio-work-item-caption-text">Not Going into The Game</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/QFCG8996000H_FRM_FY21_KNIGHT_30S_BROADCAST_OG.mp4?mrss=true', 'Farmer\'s Insurance', 'Knight');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54053-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Farmer's Insurance</h3>
-					<p class="director-portfolio-work-item-caption-text">Knight</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Smoke-Show-3004-Agency_rev.mp4?mrss=true', 'Bud Light', 'Smoke Show');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54150-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Bud Light</h3>
-					<p class="director-portfolio-work-item-caption-text">Smoke Show</p>
+					<h3 class="director-portfolio-work-item-caption-title">Dominos</h3>
+					<p class="director-portfolio-work-item-caption-text">You Tip We Tip</p>
 				</figcaption>
 			</figure>
 		
@@ -116,14 +94,47 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Dominos-You-Tip-We-Tip-DC-60.mp4?mrss=true', 'Dominos', 'You Tip We Tip');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-53921-PM.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/QFCG8996000H_FRM_FY21_KNIGHT_30S_BROADCAST_OG.mp4?mrss=true', 'Farmer\'s Insurance', 'Knight');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54053-PM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Dominos</h3>
-					<p class="director-portfolio-work-item-caption-text">You Tip We Tip</p>
+					<h3 class="director-portfolio-work-item-caption-title">Farmer's Insurance</h3>
+					<p class="director-portfolio-work-item-caption-text">Knight</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Outback_Value_Interview_30_Fran_Master_16x9_Broadcast-WD-1080p-mp4.mp4?mrss=true', 'Outback', 'Interview');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Outback.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Outback</h3>
+					<p class="director-portfolio-work-item-caption-text">Interview</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Planters-Talker-DC-30.mp4?mrss=true', 'Planters', ' Cashew Talker');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1727214083.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Planters</h3>
+					<p class="director-portfolio-work-item-caption-text"> Cashew Talker</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/GAME-30-dir-cut.mp4?mrss=true', 'Coors', 'Not Going into The Game');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54321-PM.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Coors</h3>
+					<p class="director-portfolio-work-item-caption-text">Not Going into The Game</p>
 				</figcaption>
 			</figure>
 		
@@ -135,6 +146,17 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">EARGO</h3>
 					<p class="director-portfolio-work-item-caption-text">Overheard</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Smoke-Show-3004-Agency_rev.mp4?mrss=true', 'Bud Light', 'Smoke Show');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2024-09-24-at-54150-PM.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Bud Light</h3>
+					<p class="director-portfolio-work-item-caption-text">Smoke Show</p>
 				</figcaption>
 			</figure>
 		
@@ -548,7 +570,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/GAME-30-dir-cut.mp4?mrss=true', 'Coors', 'Not Going into The Game'],['http://skinandbonesfilm.gosimian.com/assets/videos/QFCG8996000H_FRM_FY21_KNIGHT_30S_BROADCAST_OG.mp4?mrss=true', 'Farmer\'s Insurance', 'Knight'],['http://skinandbonesfilm.gosimian.com/assets/videos/Smoke-Show-3004-Agency_rev.mp4?mrss=true', 'Bud Light', 'Smoke Show'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bud-Light-Grunts-15.mp4?mrss=true', 'Bud Light', 'Grunts'],['http://skinandbonesfilm.gosimian.com/assets/videos/Dominos-You-Tip-We-Tip-DC-60.mp4?mrss=true', 'Dominos', 'You Tip We Tip'],['http://skinandbonesfilm.gosimian.com/assets/videos/EARGO-Country-Weekend.mp4?mrss=true', 'EARGO', 'Overheard'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Dominos-You-Tip-We-Tip-DC-60.mp4?mrss=true', 'Dominos', 'You Tip We Tip'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bud-Light-Grunts-15.mp4?mrss=true', 'Bud Light', 'Grunts'],['http://skinandbonesfilm.gosimian.com/assets/videos/QFCG8996000H_FRM_FY21_KNIGHT_30S_BROADCAST_OG.mp4?mrss=true', 'Farmer\'s Insurance', 'Knight'],['http://skinandbonesfilm.gosimian.com/assets/videos/Outback_Value_Interview_30_Fran_Master_16x9_Broadcast-WD-1080p-mp4.mp4?mrss=true', 'Outback', 'Interview'],['http://skinandbonesfilm.gosimian.com/assets/videos/Planters-Talker-DC-30.mp4?mrss=true', 'Planters', ' Cashew Talker'],['http://skinandbonesfilm.gosimian.com/assets/videos/GAME-30-dir-cut.mp4?mrss=true', 'Coors', 'Not Going into The Game'],['http://skinandbonesfilm.gosimian.com/assets/videos/EARGO-Country-Weekend.mp4?mrss=true', 'EARGO', 'Overheard'],['http://skinandbonesfilm.gosimian.com/assets/videos/Smoke-Show-3004-Agency_rev.mp4?mrss=true', 'Bud Light', 'Smoke Show'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
