--- a/directors/new-york-nico/index.html
+++ b/directors/new-york-nico/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/ismael">Ismael</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="https://www.stoichemaan.com/" target="_blank">STChM</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -73,6 +73,28 @@
 
 					<section class="director-portfolio-work">
 						
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/HENY1009_Hennessy-H23-20-TheSecondDecision-Hero-60s-16x9_mov.mp4?mrss=true', 'Hennessy', 'The Second Decision');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1760039625.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Hennessy</h3>
+					<p class="director-portfolio-work-item-caption-text">The Second Decision</p>
+				</figcaption>
+			</figure>
+		
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/Full-Length-Final_4knosub-REV.mp4?mrss=true', 'Katz\'s Deli', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_Full-Length-Final_4knosub-REV.jpg');">
+					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
+				</div>
+				<figcaption class="director-portfolio-work-item-caption">
+					<div class="director-portfolio-work-item-caption-line"></div>
+					<h3 class="director-portfolio-work-item-caption-title">Katz's Deli</h3>
+					<p class="director-portfolio-work-item-caption-text"></p>
+				</figcaption>
+			</figure>
+		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Knicks2024_30.mp4?mrss=true', 'Knicks', 'Playoffs 2024');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1713878382.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
@@ -81,28 +103,6 @@
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">Knicks</h3>
 					<p class="director-portfolio-work-item-caption-text">Playoffs 2024</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/PictureDay_30_Final_BROADCAST.mp4?mrss=true', 'SNY', 'Picture Day');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1714504846.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">SNY</h3>
-					<p class="director-portfolio-work-item-caption-text">Picture Day</p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/popeyes--1080p-.mp4?mrss=true', 'Popeyes', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1686238439.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Popeyes</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
 		
@@ -117,28 +117,6 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/DeNiroConTrailer_FINAL_WEB_H264_NoTitles.mp4?mrss=true', 'DeNiro Con', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2023-09-05-at-21524-PM.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">DeNiro Con</h3>
-					<p class="director-portfolio-work-item-caption-text"></p>
-				</figcaption>
-			</figure>
-		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/google_x_tribeca_-la_bonbonniere---1080p-.mp4?mrss=true', 'Google x Tribeca', 'La Bonbonniere');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1714504918.jpg');">
-					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
-				</div>
-				<figcaption class="director-portfolio-work-item-caption">
-					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">Google x Tribeca</h3>
-					<p class="director-portfolio-work-item-caption-text">La Bonbonniere</p>
-				</figcaption>
-			</figure>
-		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/the_m_jewelers_x_mlb--1080p-.mp4?mrss=true', 'The M Jewelers x MLB', '');">
 				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screen-Shot-2024-01-15-at-102218-AM.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
@@ -150,13 +128,13 @@
 				</figcaption>
 			</figure>
 		
-			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/mta_x_new_york_nico--Original-.mp4?mrss=true', 'MTA x New York Nico', '');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_mta_x_new_york_nico--Original-.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('https://skinandbonesfilm.gosimian.com/assets/videos/262_Clip1.mp4?mrss=true', '26.2 New York City Marathon Teaser', '');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-th_1762465256.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
-					<h3 class="director-portfolio-work-item-caption-title">MTA x New York Nico</h3>
+					<h3 class="director-portfolio-work-item-caption-title">26.2 New York City Marathon Teaser</h3>
 					<p class="director-portfolio-work-item-caption-text"></p>
 				</figcaption>
 			</figure>
@@ -571,7 +549,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Knicks2024_30.mp4?mrss=true', 'Knicks', 'Playoffs 2024'],['http://skinandbonesfilm.gosimian.com/assets/videos/PictureDay_30_Final_BROADCAST.mp4?mrss=true', 'SNY', 'Picture Day'],['https://skinandbonesfilm.gosimian.com/assets/videos/popeyes--1080p-.mp4?mrss=true', 'Popeyes', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/shake_shack___different_breed_of_good__30--540p-.mp4?mrss=true', 'Shake Shack', 'Different Breed of Good'],['https://skinandbonesfilm.gosimian.com/assets/videos/DeNiroConTrailer_FINAL_WEB_H264_NoTitles.mp4?mrss=true', 'DeNiro Con', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/google_x_tribeca_-la_bonbonniere---1080p-.mp4?mrss=true', 'Google x Tribeca', 'La Bonbonniere'],['https://skinandbonesfilm.gosimian.com/assets/videos/the_m_jewelers_x_mlb--1080p-.mp4?mrss=true', 'The M Jewelers x MLB', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/mta_x_new_york_nico--Original-.mp4?mrss=true', 'MTA x New York Nico', ''],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/HENY1009_Hennessy-H23-20-TheSecondDecision-Hero-60s-16x9_mov.mp4?mrss=true', 'Hennessy', 'The Second Decision'],['https://skinandbonesfilm.gosimian.com/assets/videos/Full-Length-Final_4knosub-REV.mp4?mrss=true', 'Katz\'s Deli', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Knicks2024_30.mp4?mrss=true', 'Knicks', 'Playoffs 2024'],['http://skinandbonesfilm.gosimian.com/assets/videos/shake_shack___different_breed_of_good__30--540p-.mp4?mrss=true', 'Shake Shack', 'Different Breed of Good'],['https://skinandbonesfilm.gosimian.com/assets/videos/the_m_jewelers_x_mlb--1080p-.mp4?mrss=true', 'The M Jewelers x MLB', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/262_Clip1.mp4?mrss=true', '26.2 New York City Marathon Teaser', ''],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
