--- a/directors/leo-zuckerman/index.html
+++ b/directors/leo-zuckerman/index.html
@@ -44,7 +44,7 @@
 						<div class="nav-mobile-links">
 							<a data-underline="1" href="/directors/">DIRECTORS</a><br>
 							<br>
-							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/luke-jaden">Luke Jaden</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/matthew-swanson">Matthew Swanson</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/ruganzu-howard">Ruganzu Howard</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br><a class="nav-mobile-links-director" href="/directors/stuart-mcintyre">Stuart McIntyre</a><br>
+							<a class="nav-mobile-links-director" href="/directors/david-quinn">David Quinn</a><br><a class="nav-mobile-links-director" href="/directors/dugan-gundelfinger">Dugan Gundelfinger</a><br><a class="nav-mobile-links-director" href="/directors/isaac-ravishankara">Isaac Ravishankara</a><br><a class="nav-mobile-links-director" href="/directors/ismael">Ismael</a><br><a class="nav-mobile-links-director" href="/directors/jackie-abraham">Jackie Abraham</a><br><a class="nav-mobile-links-director" href="/directors/jeremi-durand">Jeremi Durand</a><br><a class="nav-mobile-links-director" href="/directors/kate-hollowell">Kate Hollowell</a><br><a class="nav-mobile-links-director" href="/directors/kevin-castanheira">Kevin Castanheira</a><br><a data-underline="1" class="nav-mobile-links-director" href="/directors/leo-zuckerman">Leo Zuckerman</a><br><a class="nav-mobile-links-director" href="/directors/mapp">Mapp</a><br><a class="nav-mobile-links-director" href="/directors/matt-rhodes">Matt Rhodes</a><br><a class="nav-mobile-links-director" href="/directors/new-york-nico">New York Nico</a><br><a class="nav-mobile-links-director" href="/directors/nikki-ross">Nikki Ross</a><br><a class="nav-mobile-links-director" href="/directors/nolan-sarner">Nolan Sarner</a><br><a class="nav-mobile-links-director" href="/directors/renee-mao">Renée Mao</a><br><a class="nav-mobile-links-director" href="/directors/rob-fiocca">Rob Fiocca</a><br><a class="nav-mobile-links-director" href="/directors/rodney-lucas">Rodney Lucas</a><br><a class="nav-mobile-links-director" href="/directors/sam-hughes">Sam Hughes</a><br><a class="nav-mobile-links-director" href="/directors/sebastian-hill-esbrand">Sebastian Hill-Esbrand</a><br><a class="nav-mobile-links-director" href="/directors/shawn-zeytinoglu">Shawn Zeytinoglu</a><br><a class="nav-mobile-links-director" href="https://www.stoichemaan.com/" target="_blank">STChM</a><br><a class="nav-mobile-links-director" href="/directors/stuart-langfield">Stuart Langfield</a><br>
 							<br>
 							<br>
 							<a href="/about/">ABOUT</a>
@@ -73,14 +73,14 @@
 
 					<section class="director-portfolio-work">
 						
-			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/0512-TAYLORMADE-60-DC_FINAL_WEB.mp4?mrss=true', 'TaylorMade', 'Qi35 Launch');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-No-Grain00_01_23_07Still002-copy.jpg');">
+			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/0512-TAYLORMADE-60-DC_FINAL_WEB.mp4?mrss=true', 'TaylorMade', 'Imagination');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-taylor.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
 					<div class="director-portfolio-work-item-caption-line"></div>
 					<h3 class="director-portfolio-work-item-caption-title">TaylorMade</h3>
-					<p class="director-portfolio-work-item-caption-text">Qi35 Launch</p>
+					<p class="director-portfolio-work-item-caption-text">Imagination</p>
 				</figcaption>
 			</figure>
 		
@@ -107,7 +107,7 @@
 			</figure>
 		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/InterMountain-Health-The-Power-of-We.mp4?mrss=true', 'InterMountain Health', 'The Power of We');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-06-11-at-125231---PM.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Inter.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
@@ -140,7 +140,7 @@
 			</figure>
 		
 			<figure class="director-portfolio-work-item" onclick="openLightbox('http://skinandbonesfilm.gosimian.com/assets/videos/Interac---In-Life-60.mp4?mrss=true', 'Interac', 'Van Life');">
-				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-Screenshot-2025-06-11-at-12501---PM-copy.jpg');">
+				<div class="director-portfolio-work-item-thumbnail" style="background-image: url('thumbnail-interac.jpg');">
 					<div class="director-portfolio-work-item-thumbnail-hover">PLAY</div>
 				</div>
 				<figcaption class="director-portfolio-work-item-caption">
@@ -582,7 +582,7 @@ Shot on iPhone. Best paired with.. you know. See <a href="https://www.instagram.
 			</div>
 
 			<script>
-				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/0512-TAYLORMADE-60-DC_FINAL_WEB.mp4?mrss=true', 'TaylorMade', 'Qi35 Launch'],['http://skinandbonesfilm.gosimian.com/assets/videos/TOYOTA.mp4?mrss=true', 'Toyota Olympics', 'Bring it to Life'],['https://skinandbonesfilm.gosimian.com/assets/videos/Teaser_Shortened.mp4?mrss=true', 'The Ways I Punish Myself Teaser', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/InterMountain-Health-The-Power-of-We.mp4?mrss=true', 'InterMountain Health', 'The Power of We'],['http://skinandbonesfilm.gosimian.com/assets/videos/Hyundai-Fresh-Tracks.mp4?mrss=true', 'Hyundai', 'Fresh Tracks'],['http://skinandbonesfilm.gosimian.com/assets/videos/Nissan.mp4?mrss=true', 'Nissan', 'The Night'],['http://skinandbonesfilm.gosimian.com/assets/videos/Interac---In-Life-60.mp4?mrss=true', 'Interac', 'Van Life'],['http://skinandbonesfilm.gosimian.com/assets/videos/Lexus--Letters--.mp4?mrss=true', 'Lexus', 'Letters'],['http://skinandbonesfilm.gosimian.com/assets/videos/Toyota---Fun-to-Drive----DC-ProRes1.mp4?mrss=true', 'Toyota', 'Fun to Drive'],];
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/0512-TAYLORMADE-60-DC_FINAL_WEB.mp4?mrss=true', 'TaylorMade', 'Imagination'],['http://skinandbonesfilm.gosimian.com/assets/videos/TOYOTA.mp4?mrss=true', 'Toyota Olympics', 'Bring it to Life'],['https://skinandbonesfilm.gosimian.com/assets/videos/Teaser_Shortened.mp4?mrss=true', 'The Ways I Punish Myself Teaser', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/InterMountain-Health-The-Power-of-We.mp4?mrss=true', 'InterMountain Health', 'The Power of We'],['http://skinandbonesfilm.gosimian.com/assets/videos/Hyundai-Fresh-Tracks.mp4?mrss=true', 'Hyundai', 'Fresh Tracks'],['http://skinandbonesfilm.gosimian.com/assets/videos/Nissan.mp4?mrss=true', 'Nissan', 'The Night'],['http://skinandbonesfilm.gosimian.com/assets/videos/Interac---In-Life-60.mp4?mrss=true', 'Interac', 'Van Life'],['http://skinandbonesfilm.gosimian.com/assets/videos/Lexus--Letters--.mp4?mrss=true', 'Lexus', 'Letters'],['http://skinandbonesfilm.gosimian.com/assets/videos/Toyota---Fun-to-Drive----DC-ProRes1.mp4?mrss=true', 'Toyota', 'Fun to Drive'],];
 			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
